--- a/sass/modules/_eye-care-skill-area.scss
+++ b/sass/modules/_eye-care-skill-area.scss
@@ -111,9 +111,10 @@
         padding: 0 12px;
         .content-wrapper{
             .elementor-widget-wrap{
-                @include rmaxwd(991){
+                @include rmaxwd(1399){
                     margin-left: 18px !important;
                 }
+                
             }
         }
     }
