--- a/sass/modules/about-us/_about-us-area-two.scss
+++ b/sass/modules/about-us/_about-us-area-two.scss
@@ -169,6 +169,7 @@
             }
             @include lg{
                 flex-direction: row !important;
+                padding: 0 12px;
             }
             .elementor-col-50{
                 @include rmaxwd(991){
